[gd_scene load_steps=7 format=3 uid="uid://bfu8l1in4jynp"]

[ext_resource type="Script" uid="uid://ddup63d1ala76" path="res://scenes/gameplaymechanics/world2/windows_pop_up_draggable_hori.gd" id="1_4nhy8"]
[ext_resource type="Texture2D" uid="uid://cl1le0tfkaly" path="res://sprites/levels/world2/world2_windowsB_draggable.png" id="2_4nhy8"]
[ext_resource type="Texture2D" uid="uid://cnvr33bu6n551" path="res://sprites/levels/world1/windows/goggles_search.png" id="3_hh4sd"]
[ext_resource type="PackedScene" uid="uid://b6jvu013w6pfu" path="res://scenes/gameplaymechanics/climbable_horizontal.tscn" id="4_3mua1"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gppr4"]
size = Vector2(1168, 773)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4nhy8"]
size = Vector2(1176, 784)

[node name="Website_Horizontal" type="AnimatableBody2D" groups=["dragwindows"]]
collision_mask = 5
script = ExtResource("1_4nhy8")

[node name="WindowsBG" type="TextureRect" parent="."]
texture_filter = 1
offset_left = -135.0
offset_top = -252.0
offset_right = 1036.0
offset_bottom = 521.0
texture = ExtResource("2_4nhy8")
expand_mode = 1
metadata/_edit_use_anchors_ = true

[node name="Website" type="TextureRect" parent="WindowsBG"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0392827
anchor_top = 0.00258732
anchor_right = 0.0392827
anchor_bottom = 0.00258732
offset_left = 58.0
offset_top = 198.0
offset_right = 986.0
offset_bottom = 720.0
texture = ExtResource("3_hh4sd")
expand_mode = 1
metadata/_edit_use_anchors_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(449, 134.5)
shape = SubResource("RectangleShape2D_gppr4")

[node name="Button" type="Button" parent="."]
self_modulate = Color(1, 1, 1, 0)
offset_left = -135.0
offset_top = -252.0
offset_right = 1033.0
offset_bottom = 521.0
focus_mode = 0
metadata/_edit_use_anchors_ = true

[node name="Climbable_Horizontal" parent="." instance=ExtResource("4_3mua1")]
visible = false
position = Vector2(449, 498)
scale = Vector2(18.1782, 0.721774)

[node name="SticknodeDetect" type="Area2D" parent="."]
collision_mask = 5

[node name="CollisionPlayerDetect" type="CollisionShape2D" parent="SticknodeDetect"]
position = Vector2(449, 134)
shape = SubResource("RectangleShape2D_4nhy8")

[connection signal="button_down" from="Button" to="." method="_on_button_button_down"]
[connection signal="button_up" from="Button" to="." method="_on_button_button_up"]
[connection signal="area_entered" from="SticknodeDetect" to="." method="_on_sticknode_detect_area_entered"]
